--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
 name = "data-secure"
 version = "0.1.0"
-description = "Add your description here"
+description = "Data secure App"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = ["streamlit",
+    "cryptography"]
