--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,4 @@ version = "0.1.0"
 description = "Data secure App"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = ["streamlit",
-    "cryptography"]
+package-mode = false  
