--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,2 @@
-[project]
-name = "data-secure"
-version = "0.1.0"
-description = "Data secure App"
-readme = "README.md"
-requires-python = ">=3.11"
-package-mode = false  
+[tool.poetry]
+package-mode = false
