--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,13 @@
+[project]
+name = "data-secure"
+version = "0.1.0"
+description = "Secure Streamlit app for data storage"
+readme = "README.md"
+requires-python = ">=3.11"
+dependencies = [
+    "streamlit",
+    "cryptography"
+]
+
 [tool.poetry]
-package-mode = false
+package-mode = false 
